# rose25

mars_rover/: CMakeLists.txt  package.xml
mars_rover/copilot/src/: copilot_logger.cpp  copilot_monitor.cpp  monitor.c  monitor.h
mars_rover/launch/: mars_rover.launch.py
mars_rover/nodes/: battery.py  run_demo
mars_rover/worlds/: mars_curiosity.world
mars_rover_bt_executor/: CMakeLists.txt  bt_simple.xml  package.xml
mars_rover_bt_executor/include/mars_rover_bt_executor/: action_handlers.hpp  action_publisher.hpp  condition_manager.hpp
mars_rover_bt_executor/launch/: mars_rover_bt_executor_launch.py
mars_rover_bt_executor/src/: action_handlers.cpp  action_publisher.cpp  condition_manager.cpp  mars_rover_bt_executor_node.cpp
mars_rover_bt_manager/: CMakeLists.txt  README.md  mission_launch.sh  package.xml  uncertainty_aware_bt.xml
mars_rover_bt_manager/include/mars_rover_bt_manager/: action_handlers.hpp  action_publisher.hpp  condition_handlers.hpp  condition_manager.hpp
mars_rover_bt_manager/launch/: mars_rover_bt_manager_launch.py
mars_rover_bt_manager/src/: action_handlers.cpp  action_publisher.cpp  condition_handlers.cpp  condition_manager.cpp  mars_rover_bt_manager_node.cpp
mars_rover_srvs/: CMakeLists.txt  package.xml
mars_rover_srvs/srv/: MoveService.srv
